@@ -1,4 +1,4 @@
-EXTRA_DIST = trietool-0.2.1
+EXTRA_DIST = trietool.1
 
-man_MANS = trietool-0.2.1
+man_MANS = trietool.1
 
